# depbadge

./: .depcheckrc.yml  .depcruise.mjs  .gitignore  .ncurc.json  CHANGELOG.md  Cargo.toml  EULA.md  README.md  action.yml  badgesrc.yml  cspell.ignore.txt  depbadgerc.schema.json  depbadgerc.yml  eslint.config.ts  jest.config.ts  package.json  pnpm-lock.yaml  prettier.config.mjs  pyproject.toml  tsconfig.build.json  tsconfig.build.prod.json  tsconfig.exclude.json  tsconfig.json  tsup.config.ts
.changeset/: config.json  dry-yaks-travel.md  fancy-things-act.md  ready-parts-design.md  slick-mangos-lead.md  slow-mugs-love.md  tasty-crabs-heal.md
.github/workflows/: changesets.ci.yml  cicd.yml  depbadge.ci.yml  dev.ci.yml  main.ci.yml  push.ci.yml  wiki.ci.yml
.wiki/: depbadgerc-full-example.md  depbadgerc-layouts.md  depbadgerc-root.md  depbadgerc-sections.md  depbadgerc-styles.md  extend-manifest-support.md  home.md  kickoff.md  quick-start.md
.wiki/home/: docker-compose.md  system-environment.md
src/: index.ts
src/core/: build-dependency-map.ts  generate-badges.spec.ts  generate-badges.ts  get-stable-config-hash.spec.ts  get-stable-config-hash.ts  normalize-sections.ts  read-package-json.ts  render-badges-markdown.spec.ts  render-badges-markdown.ts  types.ts
src/depbadge/: errors.ts  find-file.ts  handle-badgesrc.ts  inject-badges.ts  types.ts
src/depbadgerc/: apply-markdown-to-target.spec.ts  apply-markdown-to-target.ts  compute-state-integrity.spec.ts  compute-state-integrity.ts  depbadgerc-manifest-contract.type.ts  depbadgerc.helpers.ts  depbadgerc.store.ts  (+27 more)
(+42 files in other folders)
