[package]
name = "example_project"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Example Rust project with dependencies"

# Regular runtime dependencies
[dependencies]
serde = "1.0"            # stable dependency
reqwest = { version = "0.11", features = ["json"] }

# Dev-only dependencies
[dev-dependencies]
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"

# Optional / feature-based dependencies (closest thing to peerDependencies)
[features]
# `extra` is an optional feature that activates `regex` dependency
extra = ["regex"]

[dependencies.regex]
version = "1.7"
optional = true