[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "example-project"
version = "0.1.0"
description = "Example project"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0"
]